# sui

./: .env.example  .gitignore  CHANGELOG.md  CONFIGURE_BACKEND.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  GEMINI_API_SETUP.md  IMPLEMENTATION_STATUS.md  MIGRATION_COMPLETE.md  QUICK_START.md  README copy.md  app.py  config.py  pyproject.toml  requirements.txt  run.py  setup_extension.sh
.hypothesis/examples/6740c0827738f81a/: d7e1e42e8dc465df
.hypothesis/examples/8a73440f4a77dc8d/: df2f45c00685b0c3
.hypothesis/examples/e1cfc50a458578ae/: da87627cfaa1574c
.hypothesis/examples/f0c2c16180baa3ee/: c0491bf1b7636137
.kiro/specs/dark-pattern-guardian/: requirements.md
backend/: config.py  models.py  run_backend.py
backend/static/: manifest.json  service-worker.js
backend/templates/: dashboard.html
backend/tests/: conftest.py  test_auth.py  test_auth_endpoints.py
backend/utils/: validators.py
blueprints/api/: __init__.py  analytics.py  auth.py  settings.py
blueprints/frontend/: routes.py
chrome-extension/: api-client.js  background.js  content-styles.css  content.js  dark-pattern-detector.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
chrome-extension/icons/: ICONS_NEEDED.txt  README.md
extension/: background.js  config.js  content.js  manifest.json  options.html  options.js
extension/popup/: popup.html  popup.js
services/: ai_service.py  auth_service.py  ocr_service.py
templates/: analytics.html  base.html  login.html  register.html  settings.html
tests/: test_models.py  test_security.py
utils/: crypto.py
(+6 files in other folders)
