[project]
name = "sui"
version = "0.1.0"
description = "Dark Pattern Detection System"
requires-python = ">=3.8"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-CORS==4.0.0",
    "Flask-Limiter==3.5.0",
    "cryptography==41.0.7",
    "pyotp==2.9.0",
    "webauthn==2.1.0",
    "requests==2.31.0",
    "qrcode==7.4.2",
    "Pillow==10.1.0",
    "gunicorn==21.2.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.92.1",
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
]

[project.scripts]
app = "app:app"